# BCC322-Trabalho-em-Grupo

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/: c-cpp.yml
.github/workflows/: c-cpp.yml
.qtcreator/: CMakeLists.txt.user.0f25027  CMakeLists.txt.user.15fa37c
src/interfaces/: IEstoqueService.h  IUsuarioService.h  iclienteservice.h  ipedidoservice.h
src/models/: cliente.cpp  cliente.h  pedido.cpp  pedido.h  produto.cpp  produto.h  usuario.cpp  usuario.h
src/services/: UsuarioServiceImpl.cpp  UsuarioServiceImpl.h  clienteserviceimpl.cpp  clienteserviceimpl.h  estoqueserviceImpl.cpp  estoqueserviceImpl.h  pedidoserviceImpl.cpp  pedidoserviceImpl.h
src/views/: cadastroprodutowindow.cpp  cadastroprodutowindow.h  cadastroprodutowindow.ui  cadastrowindow.ui  clienteswindow.cpp  clienteswindow.h  clienteswindow.ui  estoquewindow.cpp  estoquewindow.h  estoquewindow.ui  funcionarioswindow.cpp  funcionarioswindow.h  importacaoxmlwindow.cpp  importacaoxmlwindow.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  pedidowindow.cpp  pedidowindow.h  pedidowindow.ui  reservawindow.cpp  reservawindow.h  reservawindow.ui  usuariodialog.cpp  usuariodialog.h
tests/functional/: main.cpp  test_funcional_fluxo_pedido.cpp  test_funcional_fluxo_pedido.pro  test_funcional_interface.cpp  test_funcional_interface.pro  test_novas_funcionalidades_funcional.cpp  testes_funcionais.pro
tests/unit/: main.cpp  test_estoqueserviceImpl.cpp  test_estoqueserviceImpl.pro  test_loginwindow.cpp  test_loginwindow.pro  test_mainwindow.cpp  test_mainwindow.pro  test_novas_funcionalidades_unitario.cpp  test_pedido.cpp  test_pedido.pro  test_pedidoserviceImpl.cpp  test_pedidoserviceimpl.pro  test_pedidowindow.cpp  test_pedidowindow.pro  test_produto.cpp  test_produto.pro  test_reservawindow.cpp  test_reservawindow.pro  test_usuario.cpp  test_usuario.pro  testes_unitarios.pro
